chore: fix lint/style and guard google drive client initialization

--- a/src/components/draggable/draggable.scss
+++ b/src/components/draggable/draggable.scss
@@ -5,11 +5,12 @@
     background: var(--general-main-2);
     border: 1px solid rgb(0 0 0 / 12%);
     border-radius: 8px;
-    box-shadow: 0px 0px 8px 4px var(--shadow-menu);
+    box-shadow: 0 0 8px 4px var(--shadow-menu);
     padding: 4px;
 
     .draggable-content {
         background: var(--general-main-1);
+
         &__header {
             cursor: move;
             display: flex;
@@ -17,17 +18,21 @@
             align-items: center;
             padding: 16px;
             width: 100%;
+
             &__title {
                 font-size: 16px;
                 font-weight: 700;
             }
+
             &__close {
                 cursor: pointer;
             }
+
             &-title {
                 width: 100%;
             }
         }
+
         &__body {
             padding: 2px;
             display: contents;
@@ -43,6 +48,7 @@
             left: 0;
             cursor: row-resize;
         }
+
         &__right {
             position: absolute;
             width: 10px;
@@ -51,6 +57,7 @@
             right: -5px;
             cursor: col-resize;
         }
+
         &__bottom {
             position: absolute;
             width: 100%;
@@ -59,6 +66,7 @@
             left: 0;
             cursor: row-resize;
         }
+
         &__left {
             position: absolute;
             width: 10px;
@@ -67,6 +75,7 @@
             left: -5px;
             cursor: col-resize;
         }
+
         &__top-left {
             position: absolute;
             width: 10px;
@@ -75,6 +84,7 @@
             left: -5px;
             cursor: nwse-resize;
         }
+
         &__top-right {
             position: absolute;
             width: 10px;
@@ -83,6 +93,7 @@
             right: -5px;
             cursor: nesw-resize;
         }
+
         &__bottom-right {
             position: absolute;
             width: 10px;
@@ -91,6 +102,7 @@
             right: -5px;
             cursor: nwse-resize;
         }
+
         &__bottom-left {
             position: absolute;
             width: 10px;
