--- a/src/components/transaction-details/transaction-details-desktop.scss
+++ b/src/components/transaction-details/transaction-details-desktop.scss
@@ -3,16 +3,18 @@
 
     .dc-dialog {
         &__dialog {
-            padding: 0px;
+            padding: 0;
             width: 80vw;
             max-width: inherit;
             max-height: inherit;
             justify-content: start;
         }
+
         &__header-wrapper {
             padding-inline: 18px;
             margin: 1.5rem 0;
         }
+
         &__content {
             max-width: inherit;
             margin-bottom: 0;
@@ -23,10 +25,12 @@
         display: flex;
         flex-direction: column;
         margin-bottom: 8px;
+
         &__top-table {
             overflow: auto;
             height: inherit;
         }
+
         &__bottom-table {
             overflow: unset;
         }
@@ -45,6 +49,7 @@
         background-color: var(--general-section-2);
         font-size: 14px;
         font-weight: 700;
+
         .transaction-details-modal-desktop {
             &__table-cell {
                 margin-left: -2px;
@@ -58,19 +63,24 @@
         padding: 16px 18px;
         white-space: normal;
         word-wrap: break-word;
+
         &--grow-big {
             flex-grow: 2.5;
         }
+
         &--grow-mid {
             flex-grow: 1.5;
         }
+
         .transactions__loader-text {
             width: 100%;
         }
     }
+
     &__loss {
         color: var(--text-loss-danger);
     }
+
     &__profit {
         &--win {
             color: var(--text-profit-success);
@@ -79,6 +89,7 @@
                 content: '+';
             }
         }
+
         &--loss {
             color: var(--text-loss-danger);
 
@@ -87,10 +98,12 @@
             }
         }
     }
+
     &__icon-wrapper {
         display: flex;
         align-items: baseline;
     }
+
     &__divider {
         width: 100%;
         padding: 4px 16px;
