--- a/src/components/transaction-details/transaction-details-mobile.scss
+++ b/src/components/transaction-details/transaction-details-mobile.scss
@@ -3,6 +3,7 @@
 
     .dc-mobile-full-page-modal {
         background: var(--general-main-2);
+
         &__body {
             overflow-y: scroll;
             height: calc(100vh - 30rem);
@@ -11,8 +12,9 @@
 
     .dc-page-overlay {
         &__header-wrapper {
-            padding: 0px 16px;
+            padding: 0 16px;
         }
+
         &__header-title {
             text-align: start;
         }
@@ -25,13 +27,16 @@
         align-content: flex-start;
         height: fit-content;
     }
+
     &__icon-wrapper {
         display: flex;
         align-items: center;
+
         * {
             margin-right: 2px;
         }
     }
+
     &__card {
         display: flex;
         background: var(--general-section-2);
@@ -41,14 +46,17 @@
         margin: 8px 16px;
         border-radius: 8px;
         height: fit-content;
+
         &__row {
             display: flex;
             justify-content: space-between;
-            padding: 8px 0px;
+            padding: 8px 0;
         }
+
         &__column {
             width: 100%;
         }
+
         &__profit {
             &--win {
                 color: var(--text-profit-success);
@@ -57,6 +65,7 @@
                     content: '+';
                 }
             }
+
             &--loss {
                 color: var(--text-loss-danger);
 
@@ -66,21 +75,26 @@
             }
         }
     }
+
     &__small-title {
         font-size: 12px;
         font-weight: 700;
     }
+
     &__large-title {
         font-size: 14px;
         font-weight: 700;
     }
+
     &__label {
         font-size: 14px;
         line-height: 24px;
     }
+
     &__right-align {
         text-align: end;
     }
+
     &__divider {
         padding: 8px 16px;
         width: 100%;
@@ -88,6 +102,7 @@
 
     &__card__footer {
         position: fixed;
+
         .run-panel__stat {
             margin: 0;
             position: fixed;
